[gd_scene load_steps=7 format=2]

[ext_resource path="res://NewFPS.gd" type="Script" id=1]
[ext_resource path="res://cross-shaped-target.png" type="Texture" id=2]

[sub_resource type="CapsuleShape" id=2]
height = 3.0

[sub_resource type="CylinderShape" id=3]

[sub_resource type="CubeMesh" id=5]

[sub_resource type="CapsuleMesh" id=4]
mid_height = 3.0

[node name="NewFPS" type="KinematicBody"]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Foot" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5205, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.49163, 0 )

[node name="Camera" type="Camera" parent="Head"]
current = true

[node name="aimCast" type="RayCast" parent="Head/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -1000 )

[node name="TextureRect" type="TextureRect" parent="Head/Camera"]
margin_left = 480.0
margin_top = 268.0
margin_right = 544.0
margin_bottom = 332.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun" type="MeshInstance" parent="Head"]
transform = Transform( 0.2, 0, 0, 0, 0.2, 0, 0, 0, 1, 0.575455, -0.802458, -1.66981 )
mesh = SubResource( 5 )
material/0 = null

[node name="muzzle" type="Spatial" parent="Head/gun"]
transform = Transform( 0.999999, 0, 0, 0, 0.999999, 0, 0, 0, 1, 0, 0, -1.18984 )

[node name="groundCheck" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = null

[node name="headBonker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.73674, 0 )
enabled = true
cast_to = Vector3( 0, 1, 0 )
